--- a/css/main.css
+++ b/css/main.css
@@ -618,4 +618,126 @@ body {
   border: none;
   border-radius: 4px;
   padding: 9px 29px;
+}
+
+.main-menu {
+  padding-bottom: 0px;
+}
+
+.menu-portfolio {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+
+.menu-portfolio-item :hover, .menu-portfolio-item :focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.menu-portfolio-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.button-portfolio {
+  height: 38px;
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--button-portfolio);
+  cursor: pointer;
+  background-color: var(--button-portfolio-background);
+  border: none;
+  border-radius: 4px;
+  padding-left: 22px;
+  padding-right: 22px;
+  transition-property: color, background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-portfolio:hover, .button-portfolio:focus {
+  background-color: var(--button-portfolio-hf-background);
+  color: var(--button-portfolio-hf);
+}
+
+.portfolio {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+
+.portfolio-item {
+  margin-left: 30px;
+  margin-top: 30px;
+  border: 1px dashed #eeeeee;
+  border-style: solid;
+}
+
+.img-portfolio-box {
+  position: relative;
+  overflow: hidden;
+}
+
+.img-portfolio {
+  text-decoration: none;
+  display: block;
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+}
+.img-portfolio:hover .portfolio-text-box, .img-portfolio:focus .portfolio-text-box {
+  transform: translateY(0%);
+}
+.img-portfolio:hover, .img-portfolio:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio-text-box {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 0%;
+  text-align: start;
+  overflow: auto;
+  padding-left: 24px;
+  padding-right: 24px;
+  width: 100%;
+  height: 100%;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.55;
+  /* or 156% */
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-padding {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+}
+
+.name-portfolio-link {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--name-portfolio-link);
+}
+
+.work-definition {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--work-definition);
 }/*# sourceMappingURL=main.css.map */
