--- a/css/main.css
+++ b/css/main.css
@@ -296,7 +296,7 @@ body {
 }
 
 .hero-one {
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero3x.jpg);
   text-align: center;
   align-items: center;
   background-size: cover;
