--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -3,7 +3,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/hero/hero.jpg);
+    url(../images/hero/hero3x.jpg);
   text-align: center;
   align-items: center;
   background-size: cover;
