--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,9 +1,9 @@
-.hero-one {
+.hero__one {
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/hero/hero3x.jpg);
+    url(../images/hero/hero.jpg);
   text-align: center;
   align-items: center;
   background-size: cover;
@@ -15,7 +15,7 @@
   margin: 0 auto;
 }
 
-.hero-title {
+.hero__title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -26,7 +26,7 @@
   margin-bottom: 30px;
 }
 
-.button-hero {
+.button__hero {
   width: 200px;
   height: 50px;
   font-weight: 700;
