--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,9 +1,8 @@
 .hero__one {
   background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/hero/hero.jpg);
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)
+  );
   text-align: center;
   align-items: center;
   background-size: cover;
@@ -14,7 +13,9 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin: 0 auto;
 }
-
+.hero__one {
+  background-image: url(../images/hero/hero.jpg);
+}
 .hero__title {
   font-weight: 900;
   font-size: 44px;
