--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -33,8 +33,16 @@ body {
   padding-top: 50px;
   padding-bottom: 94px;
 }
+// @media screen and (max-width: 768px) {
+//   .body {
+//   }
+// }
 
-@media {
-  .body {
-  }
-}
+// @media screen and (min-width: 768px) {
+//   .body {
+//   }
+// }
+// @media screen and (min-width: 1200px) {
+//   .body {
+//   }
+// }
