--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,21 @@ body {
   padding-bottom: 94px;
 }
 
+@media screen and (min-width: 1200px) {
+  .body {
+    height: 1200px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .body {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .body {
+    height: 480px;
+  }
+}
 .container {
   width: 1200px;
   margin: auto;
