--- a/css/main.css
+++ b/css/main.css
@@ -85,17 +85,17 @@ body {
 
 @media screen and (min-width: 1200px) {
   .body {
-    height: 1200px;
+    weight: 1200px;
   }
 }
 @media screen and (min-width: 768px) {
   .body {
-    width: 768px;
+    weight: 768px;
   }
 }
 @media screen and (min-width: 480px) {
   .body {
-    height: 480px;
+    weight: 480px;
   }
 }
 .container {
