--- a/css/main.css
+++ b/css/main.css
@@ -83,21 +83,6 @@ body {
   padding-bottom: 94px;
 }
 
-@media screen and (min-width: 1200px) {
-  .body {
-    weight: 1200px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .body {
-    weight: 768px;
-  }
-}
-@media screen and (min-width: 480px) {
-  .body {
-    weight: 480px;
-  }
-}
 .container {
   width: 1200px;
   margin: auto;
@@ -308,6 +293,50 @@ body {
 .tel__link:hover .smartphone__class,
 .tel__link:focus .smartphone__class {
   fill: var(--color-header);
+}
+
+.burger-btn {
+  justify-content: right;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+.burger-btn__icon {
+  height: 40px;
+  width: 40px;
+  fill: #000000;
+}
+
+.mobile-meny {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vw;
+  background-color: #ffffff;
+}
+
+.mobile-meny__close {
+  background-color: #ffffff;
+  border: none;
+  padding: 0;
+  line-height: 0;
+}
+
+.mobile-meny__closen-icon {
+  height: 40px;
+  width: 40px;
+}
+
+.mobile-meny__close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
+.mobile-meny__conteiner {
+  position: relative;
 }
 
 .hero__one {
