--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -34,20 +34,20 @@ body {
   padding-bottom: 94px;
 }
 
-@media screen and (min-width: 1200px) {
-  .body {
-    weight: 1200px;
-  }
-}
+// @media screen and (min-width: 1200px) {
+//   .body {
+//     weight: 1200px;
+//   }
+// }
 
-@media screen and (min-width: 768px) {
-  .body {
-    weight: 768px;
-  }
-}
+// @media screen and (min-width: 768px) {
+//   .body {
+//     weight: 768px;
+//   }
+// }
 
-@media screen and (min-width: 480px) {
-  .body {
-    weight: 480px;
-  }
-}
+// @media screen and (min-width: 480px) {
+//   .body {
+//     weight: 480px;
+//   }
+// }
