--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,14 @@ body {
   padding-bottom: 94px;
 }
 
+.link {
+  list-style: none;
+}
+
+.list {
+  text-decoration: none;
+}
+
 .container {
   width: 1200px;
   margin: auto;
@@ -300,11 +308,18 @@ body {
   background-color: transparent;
   border: none;
   padding: 0;
+  cursor: pointer;
 }
 .burger-btn__icon {
   height: 40px;
   width: 40px;
   fill: #000000;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.burger-btn__icon:hover, .burger-btn__icon:focus, .burger-btn__icon:active {
+  fill: var(--color-header);
 }
 
 .mobile-meny {
@@ -315,6 +330,14 @@ body {
   width: 100vw;
   height: 100vw;
   background-color: #ffffff;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.mobile-meny.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 .mobile-meny__close {
@@ -327,6 +350,14 @@ body {
 .mobile-meny__closen-icon {
   height: 40px;
   width: 40px;
+  cursor: pointer;
+  color: #000000;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-meny__closen-icon:hover, .mobile-meny__closen-icon:focus, .mobile-meny__closen-icon:active {
+  fill: var(--color-header);
 }
 
 .mobile-meny__close-btn {
@@ -337,6 +368,83 @@ body {
 
 .mobile-meny__conteiner {
   position: relative;
+  min-height: 200px;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.nav-many {
+  display: flex;
+  flex-direction: column;
+}
+.nav-many__item {
+  margin-bottom: 36px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.76;
+  letter-spacing: 0.02em;
+}
+.nav-many__link {
+  text-decoration: none;
+  color: #212121;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav-many__link:hover, .nav-many__link:focus, .nav-many__link:active {
+  color: var(--color-header);
+}
+
+.many-contacts__list {
+  display: flex;
+  flex-direction: column;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.23;
+  letter-spacing: 0.02em;
+  list-style: none;
+  padding-bottom: 32px;
+}
+
+.many-contacts__link {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  padding-bottom: 32px;
+}
+
+.many-lists {
+  display: flex;
+  align-items: center;
+}
+.many-lists__item {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  padding-right: 10px;
+}
+.many-lists__item-link {
+  text-decoration: none;
+  color: #2196f3;
+}
+.many-lists__item-link::after {
+  content: "";
+  position: absolute;
+  width: 22px;
+  height: 0px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+  box-sizing: border-box;
+}
+.many-lists .many-lists__item :not(first-child) {
+  padding-left: 10px;
 }
 
 .hero__one {
