--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -34,6 +34,13 @@ body {
   padding-bottom: 94px;
 }
 
+.link {
+  list-style: none;
+}
+
+.list {
+  text-decoration: none;
+}
 // @media screen and (min-width: 1200px) {
 //   .body {
 //     weight: 1200px;
