--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,8 @@
-// @media screen and (min-width: 480px) {
-//   .header: {
-//     width: 480px;
-//   }
-// }
-
+@media screen and (max-width: 767px) {
+  .menu {
+    display: none;
+  }
+}
 // @media screen and (min-width: 768px) {
 //   .header: {
 //     width: 768px;
