--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,13 @@
-@media screen and (max-width: 767px) {
-  .menu {
-    display: none;
+@media screen and (max-width: 768px) {
+  .menu__item {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+  .contacts__list {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
   }
 }
 // @media screen and (min-width: 768px) {
