--- a/sass/layout/_when-gob.scss
+++ b/sass/layout/_when-gob.scss
@@ -1,4 +1,5 @@
-@media screen and (max-width: 767px) {
+// 0-768
+@media screen and (max-width: 768px) {
   .when-gob-section {
     display: none;
   }
