--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,21 @@ body {
   padding-right: 15px;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
 .modal-form-button {
   width: 200px;
   height: 50px;
@@ -184,9 +199,17 @@ body {
   color: var(--web-logo);
 }
 
-@media screen and (max-width: 767px) {
-  .menu {
-    display: none;
+@media screen and (max-width: 768px) {
+  .menu__item {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+
+  .contacts__list {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
   }
 }
 .header {
@@ -459,7 +482,8 @@ body {
   background-size: cover;
   padding-top: 206px;
   padding-bottom: 200px;
-  width: 1600px;
+  width: 480px;
+  height: 400px;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin: 0 auto;
@@ -468,11 +492,15 @@ body {
 @media (min-device-pixel-ratio: 2) and (min-width: 768px), (-webkit-min-device-pixel-ratio: 2) and (min-width: 768px), (min-resolution: 192dpi) and (min-width: 768px), (min-resolution: 2dppx) and (min-width: 768px) {
   .hero__one {
     background-image: url(../images/hero/hero2x.jpg);
+    width: 768px;
+    height: 400px;
   }
 }
 @media screen and (min-width: 1200px) {
   .hero__one {
     background-image: url(../images/hero/hero3x.jpg);
+    width: 1200px;
+    height: 600px;
   }
 }
 .hero__title {
@@ -500,6 +528,29 @@ body {
   border-radius: 4px;
 }
 
+@media screen and (max-width: 480px) {
+  .benefits__list {
+    flex-direction: column;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 768px) {
+  .benefits__list {
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+
+  .benefits-item {
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .benefits__list {
+    justify-content: space-between;
+  }
+}
 .benefits {
   padding-bottom: 0px;
 }
@@ -507,7 +558,6 @@ body {
 .benefits__list {
   list-style: none;
   display: flex;
-  justify-content: space-between;
 }
 
 .benefits__item--icon {
@@ -540,7 +590,7 @@ body {
   margin-bottom: 10px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .when-gob-section {
     display: none;
   }
