--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -1,3 +1,29 @@
+// 480+
+@media screen and (max-width: 480px) {
+  .benefits__list {
+    flex-direction: column;
+    margin: 0 auto;
+  }
+}
+// 768+
+@media screen and (max-width: 768px) {
+  .benefits__list {
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+  .benefits-item {
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+}
+//  1200+
+@media screen and (min-width: 1200px) {
+  .benefits__list {
+    justify-content: space-between;
+  }
+}
+
 .benefits {
   padding-bottom: 0px;
 }
@@ -5,7 +31,6 @@
 .benefits__list {
   list-style: none;
   display: flex;
-  justify-content: space-between;
 }
 
 .benefits__item--icon {
