--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,7 +9,8 @@
   background-size: cover;
   padding-top: 206px;
   padding-bottom: 200px;
-  width: 1600px;
+  width: 480px;
+  height: 400px;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin: 0 auto;
@@ -19,11 +20,15 @@
   (min-resolution: 2dppx) and (min-width: 768px) {
   .hero__one {
     background-image: url(../images/hero/hero2x.jpg);
+    width: 768px;
+    height: 400px;
   }
 }
 @media screen and (min-width: 1200px) {
   .hero__one {
     background-image: url(../images/hero/hero3x.jpg);
+    width: 1200px;
+    height: 600px;
   }
 }
 
