--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -6,12 +6,12 @@
 }
 @media screen and (min-width: 480px) {
   .container {
-    width: 480px;
+    width: 100vw;
   }
 }
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
+    width: 100vw;
   }
 }
 @media screen and (min-width: 1200px) {
