--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,6 @@ body {
 }
 
 .container {
-  width: 1200px;
   margin: auto;
   padding-left: 15px;
   padding-right: 15px;
@@ -100,12 +99,13 @@ body {
 
 @media screen and (min-width: 480px) {
   .container {
-    width: 480px;
+    width: 448px;
+    margin: 0 auto;
   }
 }
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
+    width: 720px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -199,7 +199,7 @@ body {
   color: var(--web-logo);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 480px) {
   .menu__item {
     opacity: 0;
     visibility: hidden;
@@ -210,6 +210,22 @@ body {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+  }
+}
+@media screen and (max-width: 767px) {
+  .contacts__list {
+    -webkit-text-decoration: column;
+            text-decoration: column;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__list {
+    justify-content: center;
+    align-items: center;
+  }
+
+  .burger-btn {
+    display: none;
   }
 }
 .header {
@@ -279,8 +295,6 @@ body {
   list-style: none;
   display: flex;
   margin-left: auto;
-  align-items: center;
-  justify-content: center;
 }
 
 .icon__list {
@@ -533,6 +547,10 @@ body {
     flex-direction: column;
     margin: 0 auto;
   }
+
+  .benefits__item--icon {
+    width: 450px;
+  }
 }
 @media screen and (max-width: 768px) {
   .benefits__list {
@@ -545,10 +563,18 @@ body {
     margin-left: 30px;
     margin-top: 30px;
   }
+
+  .benefits__item--icon {
+    width: 354px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .benefits__list {
     justify-content: space-between;
+  }
+
+  .benefits__item--icon {
+    width: 270px;
   }
 }
 .benefits {
@@ -564,7 +590,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 270px;
   height: 120px;
   cursor: unset;
   background-color: #f5f4fa;
