--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,17 +1,17 @@
 .container {
-  width: 1200px;
   margin: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
 @media screen and (min-width: 480px) {
   .container {
-    width: 100vw;
+    width: 448px;
+    margin: 0 auto;
   }
 }
 @media screen and (min-width: 768px) {
   .container {
-    width: 100vw;
+    width: 720px;
   }
 }
 @media screen and (min-width: 1200px) {
