--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -3,17 +3,26 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/hero/hero.jpg);
+    url(../images/hero/hero3x.jpg);
   text-align: center;
   align-items: center;
   background-size: cover;
   padding-top: 206px;
   padding-bottom: 200px;
-  width: 480px;
-  height: 400px;
+  width: 1600px;
+  height: 600px;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin: 0 auto;
+}
+@media (min-device-pixel-ratio: 1) and (min-width: 480px),
+  (min-resolution: 115dpi) and (min-width: 480px),
+  (min-resolution: 1dppx) and (min-width: 480px) {
+  .hero__one {
+    background-image: url(../images/hero/hero.jpg);
+    width: 480px;
+    height: 400px;
+  }
 }
 @media (min-device-pixel-ratio: 2) and (min-width: 768px),
   (min-resolution: 192dpi) and (min-width: 768px),
@@ -24,14 +33,16 @@
     height: 400px;
   }
 }
-@media screen and (min-width: 1200px) {
+
+@media (min-device-pixel-ratio: 3) and (min-width: 1200px),
+  (min-resolution: 288dpi) and (min-width: 1200px),
+  (min-resolution: 3dppx) and (min-width: 1200px) {
   .hero__one {
     background-image: url(../images/hero/hero3x.jpg);
-    width: 1200px;
+    width: 1600px;
     height: 600px;
   }
 }
-
 .hero__title {
   font-weight: 900;
   font-size: 44px;
