--- a/css/main.css
+++ b/css/main.css
@@ -567,13 +567,18 @@ body {
 }
 
 @media screen and (max-width: 480px) {
+  .benefits {
+    align-items: center;
+  }
+
   .benefits__list {
+    align-items: center;
     flex-direction: column;
-    margin: 0 auto;
+    width: 100vw;
   }
 
   .benefits__item--icon {
-    width: 450px;
+    width: 100vw;
   }
 }
 @media screen and (max-width: 768px) {
@@ -599,6 +604,19 @@ body {
 
   .benefits__item--icon {
     width: 270px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .benefits__list {
+    align-items: center;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+
+  .benefits-item {
+    margin-left: 30px;
+    margin-top: 30px;
   }
 }
 .benefits {
@@ -639,7 +657,7 @@ body {
   margin-bottom: 10px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1200px) {
   .when-gob-section {
     display: none;
   }
@@ -729,12 +747,29 @@ body {
   margin-bottom: 16px;
 }
 
-.customers-icon-list {
-  display: flex;
-  list-style: none;
-  justify-content: space-between;
-}
+@media screen and (max-width: 1200px) {
+  .customers-icon-list {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
 
+  .customers-icons {
+    margin-left: 30px;
+    margin-top: 30px;
+    border: 1px dashed #eeeeee;
+    border-style: solid;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .customers-icon-list {
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+  }
+}
 .customers-icons {
   display: flex;
   align-items: center;
@@ -753,6 +788,28 @@ body {
   border: 1px solid #2196f3;
 }
 
+@media screen and (max-width: 768px) {
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-container {
+    display: flex;
+    align-items: baseline;
+  }
+
+  .modal-form-footer-label {
+    display: flex;
+  }
+
+  .margin-footer {
+    margin-bottom: 20px;
+    margin-right: 156px;
+  }
+}
 .footer {
   background-color: var(--footer-background-color);
 }
@@ -762,15 +819,8 @@ body {
 }
 
 .footer-container {
-  display: flex;
-  align-items: baseline;
   padding-top: 60px;
   padding-bottom: 60px;
-}
-
-.margin-footer {
-  margin-bottom: 20px;
-  margin-right: 156px;
 }
 
 .contacts {
@@ -861,10 +911,6 @@ body {
 
 .button {
   transform: translateY(25%);
-}
-
-.modal-form-footer-label {
-  display: flex;
 }
 
 .modal-form-footer-input {
