--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,7 @@ body {
 @media screen and (min-width: 768px) {
   .container {
     width: 720px;
+    margin: 0 auto;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -700,6 +701,16 @@ body {
   margin-bottom: 16px;
 }
 
+@media screen and (max-width: 768px) {
+  .customers-icon-list {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+}
 @media screen and (max-width: 1200px) {
   .customers-icon-list {
     list-style: none;
