--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -12,6 +12,7 @@
 @media screen and (min-width: 768px) {
   .container {
     width: 720px;
+    margin: 0 auto;
   }
 }
 @media screen and (min-width: 1200px) {
