--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -1,6 +1,14 @@
 @media screen and (max-width: 768px) {
 }
 @media screen and (max-width: 768px) {
+  .customers-icon-list {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
 }
 @media screen and (max-width: 1200px) {
   .customers-icon-list {
