--- a/css/main.css
+++ b/css/main.css
@@ -650,20 +650,35 @@ body {
   color: #ffffff;
 }
 
+@media screen and (max-width: 767px) {
+  .comande-img {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .comande-img {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+
+  .about-list-img {
+    width: 270px;
+    height: 260px;
+  }
+}
 .comande {
   background-color: var(--comande-background-color);
 }
 
 .big {
   margin-bottom: 50px;
-}
-
-.comande-img {
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
 }
 
 .comande-img-item {
@@ -767,7 +782,6 @@ body {
 
   .modal-form-footer-label {
     display: flex;
-    flex-direction: column;
     align-items: center;
   }
 
@@ -898,7 +912,7 @@ body {
   color: var(--button-hero);
   cursor: pointer;
   background-color: var(--button-hero-background-color);
-  border: none;
+  border: 1px solid #2196f3;
   border-radius: 4px;
   padding: 9px 29px;
 }
