--- a/sass/layout/_comande.scss
+++ b/sass/layout/_comande.scss
@@ -1,16 +1,34 @@
+@media screen and (max-width: 767px) {
+  .comande-img {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+}
+@media screen and (max-width: 1200px) {
+}
+@media screen and (min-width: 1200px) {
+  .comande-img {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+  .about-list-img {
+    width: 270px;
+    height: 260px;
+  }
+}
+
 .comande {
   background-color: var(--comande-background-color);
 }
 
 .big {
   margin-bottom: 50px;
-}
-.comande-img {
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
 }
 
 .comande-img-item {
