--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,14 @@ p {
   margin-bottom: 0;
 }
 
+@media screen and (max-width: 768px) {
+  h3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+}
 ul,
 ol {
   margin-top: 0;
@@ -773,6 +781,19 @@ body {
     flex-direction: column;
     align-items: center;
   }
+
+  .footer-container-mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .block-footer {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer-container {
@@ -788,6 +809,15 @@ body {
   .margin-footer {
     margin-bottom: 20px;
     margin-right: 156px;
+  }
+
+  .footer-h-three {
+    font-weight: 700px;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
   }
 }
 .footer {
@@ -846,15 +876,13 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-  margin-bottom: 17px;
-  margin-right: 154px;
 }
 
 .footer-icon-list {
   display: flex;
   list-style: none;
 }
-.footer-icon-list .footer-icon-list :not(:last-child) {
+.footer-icon-list :not(:last-child) {
   margin-right: 10px;
 }
 
