--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,6 +8,14 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
+@media screen and (max-width: 768px) {
+  h3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+}
 
 ul,
 ol {
