--- a/css/main.css
+++ b/css/main.css
@@ -794,6 +794,31 @@ body {
     flex-direction: column;
     align-items: center;
   }
+
+  .footer-padding-logo {
+    padding-bottom: 20px;
+  }
+
+  .footer-padding-contacts {
+    padding-bottom: 60px;
+  }
+
+  .modal-form-footer-input {
+    width: 444px;
+  }
+
+  .modal-form-footer-input {
+    margin-bottom: 20px;
+  }
+
+  .modal-footer-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    -webkit-text-decoration: column;
+            text-decoration: column;
+    margin: 0 auto;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer-container {
@@ -818,6 +843,24 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #ffffff;
+  }
+
+  .modal-form-footer-input {
+    width: 358px;
+  }
+
+  .modal-form-footer {
+    height: 85px;
+  }
+
+  .modal-form-footer-input {
+    height: 50px;
+    margin-right: 12px;
+    padding-left: 15px;
+  }
+
+  .button {
+    transform: translateY(25%);
   }
 }
 .footer {
@@ -910,25 +953,16 @@ body {
 }
 
 .modal-form-footer {
-  width: 600px;
-  height: 85px;
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
 }
 
-.button {
-  transform: translateY(25%);
-}
-
 .modal-form-footer-input {
-  width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  margin-right: 12px;
-  padding-left: 15px;
   background-color: #2f303a;
 }
 
