--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -175,6 +175,7 @@
   border-radius: 4px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   background-color: #2f303a;
+  padding-left: 16px;
 }
 
 .modal-footer-button {
