--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -14,7 +14,7 @@
   }
 }
 // -768
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1200px) {
   .benefits__list {
     flex-wrap: wrap;
     margin-left: -30px;
@@ -39,18 +39,17 @@
   }
 }
 
-@media screen and (min-width: 768px) {
-  .benefits__list {
-    align-items: center;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -30px;
-  }
-  .benefits-item {
-    margin-left: 30px;
-    margin-top: 30px;
-  }
-}
+// @media screen and (min-width: 768px) {
+//   .benefits__list {
+//     flex-wrap: wrap;
+//     margin-left: -30px;
+//     margin-top: -30px;
+//   }
+//   .benefits-item {
+//     margin-left: 30px;
+//     margin-top: 30px;
+//   }
+// }
 .benefits {
   padding-bottom: 0px;
 }
